HHH-14802 Update CockroachDB support for 6